# vtes-rulings

./: .gitignore  .yamllint.yaml  LICENSE  MANIFEST.in  Makefile  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.parcel-cache/: 77737496c6164a06-AssetGraph-0  7f973df67467291d-AssetGraph-0  data.mdb  e5aa135b31a944a9-BundleGraph-0  lock.mdb  requestGraph-9fc58558ab5259f1-0  requestGraph-nodes-0-9fc58558ab5259f1-0
output/: multiple_references.yaml  rulings_by_references.yaml
rulings/: groups.yaml  references.yaml  rulings.yaml
scripts/: check_rulings.py  dump_krcg_rulings.py  fetchref.py  requirements.txt
src/: __init__.py  api.py
src/static/css/: base.css
src/static/js/: display.js  display.ts
src/static/js/ts-built/: display.js
src/templates/: 404.html  index.html  layout.html
src/vtesrulings/: api.py  rulings.py
src/vtesrulings/data/: groups.yaml  references.yaml  rulings.yaml
src/vtesrulings/static/css/: base.css  base.scss
src/vtesrulings/static/js/: display.ts
src/vtesrulings/static/js/ts-built/: display.js
src/vtesrulings/templates/: 404.html  groups.html  index.html  layout.html
tests/: conftest.py  test_api.py  test_pages.py
