[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "vtes-rulings"
version = "0.0"
authors = [{ name = "VEKN" }]
description = "VTES cards rulings"
keywords = ["vtes", "Vampire: The Eternal Struggle", "CCG"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3",
    "krcg>=3.11",
    "black>=24",
    "ruff>=0",
    "ruyaml",
    "yamlfix",
    "yamllint",
]

[project.urls]
Repository = "https://github.com/vtes-biased/vtes-rulings"

[tool.setuptools.packages.find]
where = ["rulings"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]

[tool.setuptools_scm]

[tool.yamlfix]
line_length = 120
sequence_style = "block_style"
